project/stage/parse_tests/tests/reject/bad_statements/bad_assignments/aggregate_types/assign_to_keyword.ul
string f() {
    id[0]=if;
}
